add rent questions substeps and new api
