# src/api/account/index.ts
@@ -36,8 +36,8 @@ export type {
   RhHistoryConfirmAddressResponse,
   RhConfirmLastRegYearRequest,
   RhConfirmLastRegYearResponse,
-  RhHistorySetCurrentRentRequest,
-  RhHistorySetCurrentRentResponse,
+  RhHistorySetApartmentInfoRequest,
+  RhHistorySetApartmentInfoResponse,
   RhHistoryDeleteResponse,
   RhHistoryList,
   RhDeleteAllScannedPagesResponse,
@@ -112,7 +112,7 @@ export {
 export {
   confirmRhHistoryAddress,
   confirmRhHistoryLastRegYear,
-  setRhHistoryCurrentRent,
+  setRhHistoryApartmentInfo,
   ackRhHistoryScanUpload,
   createRhHistory,
   createRhHistoryReportPdf,
